--- a/Lab1/index.html
+++ b/Lab1/index.html
@@ -2,6 +2,12 @@
 <html>
 <head>
   <title>My Favorite Recipe</title>
+  <style>
+    body {
+      background-image: url('tresleches.jpg');
+      background-size: cover;
+    }
+  </style>
 </head>
 <body>
   <h1>Tres Leches</h1>
@@ -19,7 +25,6 @@
     <li>1 (14 oz) can sweetened condensed milk</li>
     <li>1 (12 oz) can evaporated milk</li>
     <li>1 1/2 cups heavy cream</li>
-    <li>Ground cinnamon (for garnish)</li>
   </ul>
   
   <h3>Instructions:</h3>
@@ -38,8 +43,9 @@
     <li>To serve, sprinkle the top with ground cinnamon. Cut into squares and enjoy!</li>
   </ol>
   
-  <p>This Tres Leches recipie is my favorite recipe because its the basic ands simple version, sometimes simplicity is the best option and this recipe just completes that for me</p>
+  <p>Tres Leches is my favorite recipe because it combines the moistness of a sponge cake with the creamy richness of three different milks. The result is a heavenly dessert that melts in your mouth. It's perfect for any occasion, from birthdays to family gatherings.</p>
   
   <p>If you'd like to explore more delicious recipes, check out <a href="https://natashaskitchen.com/tres-leches-cake/">https://natashaskitchen.com/tres-leches-cake/</a> for a wide range of free recipes online.</p>
 </body>
 </html>
+
