--- a/Lab2/indexx.html
+++ b/Lab2/indexx.html
@@ -2,50 +2,54 @@
 <html>
 <head>
   <title>My Favorite Recipe</title>
-  <style>
-    body {
-      background-image: url('tresleches.jpg');
-      background-size: cover;
-    }
-  </style>
+  <link rel="recipe" href="recipe.css">
 </head>
 <body>
-  <h1>Tres Leches</h1>
-  <h2>A Classic Latin American Dessert</h2>
+  <header>
+    <h1>My Favorite Recipe</h1>
+    <h2>A Classic Latin American Dessert</h2>
+  </header>
   
-  <h3>Ingredients:</h3>
-  <ul>
-    <li>1 cup all-purpose flour</li>
-    <li>1 1/2 teaspoons baking powder</li>
-    <li>1/4 cup unsalted butter, softened</li>
-    <li>3/4 cup white sugar</li>
-    <li>5 eggs</li>
-    <li>1/2 teaspoon vanilla extract</li>
-    <li>1 cup whole milk</li>
-    <li>1 (14 oz) can sweetened condensed milk</li>
-    <li>1 (12 oz) can evaporated milk</li>
-    <li>1 1/2 cups heavy cream</li>
-  </ul>
+  <section>
+    <h3>Ingredients:</h3>
+    <ul>
+      <li><img src="flour.jpg" alt="Flour"> 1 cup all-purpose flour</li>
+      <li><img src="baking-powder.jpg" alt="Baking Powder"> 1 1/2 teaspoons baking powder</li>
+      <li><img src="butter.jpg" alt="Butter"> 1/4 cup unsalted butter, softened</li>
+      <li><img src="sugar.jpg" alt="Sugar"> 3/4 cup white sugar</li>
+      <li><img src="eggs.jpg" alt="Eggs"> 5 eggs</li>
+      <li><img src="vanilla-extract.jpg" alt="Vanilla Extract"> 1/2 teaspoon vanilla extract</li>
+      <li><img src="milk.jpg" alt="Milk"> 1 cup whole milk</li>
+      <li><img src="sweetened-condensed-milk.jpg" alt="Sweetened Condensed Milk"> 1 (14 oz) can sweetened condensed milk</li>
+      <li><img src="evaporated-milk.jpg" alt="Evaporated Milk"> 1 (12 oz) can evaporated milk</li>
+      <li><img src="heavy-cream.jpg" alt="Heavy Cream"> 1 1/2 cups heavy cream</li>
+    </ul>
+  </section>
   
-  <h3>Instructions:</h3>
-  <ol>
-    <li>Preheat the oven to 350°F (175°C). Grease and flour a 9x13-inch baking pan.</li>
-    <li>In a medium mixing bowl, combine flour and baking powder. Set aside.</li>
-    <li>In a large mixing bowl, cream together the softened butter and sugar until light and fluffy.</li>
-    <li>Add eggs one at a time, beating well after each addition. Stir in the vanilla extract.</li>
-    <li>Gradually add the flour mixture into the butter mixture, alternating with the whole milk. Mix until just combined.</li>
-    <li>Pour the batter into the prepared baking pan and spread it evenly.</li>
-    <li>Bake for 30-35 minutes or until a toothpick inserted into the center comes out clean.</li>
-    <li>Remove the cake from the oven and let it cool for about 10 minutes.</li>
-    <li>In a separate mixing bowl, whisk together the sweetened condensed milk, evaporated milk, and heavy cream.</li>
-    <li>Poke holes all over the cake using a fork or skewer, then slowly pour the milk mixture over the cake, allowing it to soak in.</li>
-    <li>Cover the cake and refrigerate for at least 4 hours or overnight.</li>
-    <li>To serve, sprinkle the top with ground cinnamon. Cut into squares and enjoy!</li>
+  <section>
+    <h3>Instructions:</h3>
+    <ol>
+      <li>Preheat the oven to 350°F (175°C). Grease and flour a 9x13-inch baking pan.</li>
+      <li>In a medium mixing bowl, combine flour and baking powder. Set aside.</li>
+      <li>In a large mixing bowl, cream together the softened butter and sugar until light and fluffy.</li>
+      <li>Add eggs one at a time, beating well after each addition. Stir in the vanilla extract.</li>
+      <li>Gradually add the flour mixture into the butter mixture, alternating with the whole milk. Mix until just combined.</li>
+      <li>Pour the batter into the prepared baking pan and spread it evenly.</li>
+      <li>Bake for 30-35 minutes or until a toothpick inserted into the center comes out clean.</li>
+      <li>Remove the cake from the oven and let it cool for about 10 minutes.</li>
+      <li>In a separate mixing bowl, whisk together the sweetened condensed milk, evaporated milk, and heavy cream.</li>
+      <li>Poke holes all over the cake using a fork or skewer, then slowly pour the milk mixture over the cake, allowing it to soak in.</li>
+      <li>Cover the cake and refrigerate for at least 4 hours or overnight.</li>
+      <li>To serve, sprinkle the top with ground cinnamon. Cut into squares and enjoy!</li>
   </ol>
+  </section>
   
-  <p>Tres Leches is my favorite recipe because it combines the moistness of a sponge cake with the creamy richness of three different milks. The result is a heavenly dessert that melts in your mouth. It's perfect for any occasion, from birthdays to family gatherings.</p>
-  
+  <section>
+    <h3>Why I Love This Recipe:</h3>
+    <p>Tres Leches is my favorite recipe because it combines the moistness of a sponge cake with the creamy richness of three different milks. The result is a heavenly dessert that melts in your mouth. It's perfect for any occasion, from birthdays to family gatherings.</p>  
   <p>If you'd like to explore more delicious recipes, check out <a href="https://natashaskitchen.com/tres-leches-cake/">https://natashaskitchen.com/tres-leches-cake/</a> for a wide range of free recipes online.</p>
+  </section>
 </body>
 </html>
+
 
