--- a/Lab2/indexx.html
+++ b/Lab2/indexx.html
@@ -2,17 +2,13 @@
 <html>
 <head>
   <title>My Favorite Recipe</title>
-  <link rel="recipe" href="recipe.css">
-  <style>
-    body {
-      background-image: url('tresleches.jpg');
-      background-size: cover;
-    }
-  </style>
+  <link rel="stylesheet" href="recipe.css">
 </head>
 <body>
-  <h1>Tres Leches</h1>
-  <h2>A Classic Latin American Dessert</h2>
+  <header>
+    <h1>Tres Leches </h1>
+    <h2>A Classic Latin American Dessert</h2>
+  </header>
   
   <h3>Ingredients:</h3>
   <ul>
