--- a/Lab2/index.html
+++ b/Lab2/index.html
@@ -42,4 +42,7 @@
     <li>Poke holes all over the cake using a fork or skewer, then slowly pour the milk mixture over the cake, allowing it to soak in.</li>
     <li>Cover the cake and refrigerate for at least 4 hours or overnight.</li>
     <li>To serve, sprinkle the top with ground cinnamon. Cut into squares and
+  <p>If you'd like to explore more delicious recipes, check out <a href="https://natashaskitchen.com/tres-leches-cake/">https://natashaskitchen.com/tres-leches-cake/</a> for a wide range of free recipes online.</p>
+</body>
+</html>
 
