--- a/Lab3/index.html
+++ b/Lab3/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
   <title>My Favorite Recipe</title>
+  <img class="header-image" src="images/header-image.jpg" alt="Header Image">
   <style>
     body {
       background-image: url('tresleches.jpg');
@@ -42,4 +43,11 @@
     <li>Poke holes all over the cake using a fork or skewer, then slowly pour the milk mixture over the cake, allowing it to soak in.</li>
     <li>Cover the cake and refrigerate for at least 4 hours or overnight.</li>
     <li>To serve, sprinkle the top with ground cinnamon. Cut into squares and
-
+  <div class="image">
+    <img src="image.jpg" alt="Image Description">
+  </div>
+  
+  <p>If you'd like to explore more delicious recipes, check out <a href="https://natashaskitchen.com/tres-leches-cake/">
+    <img src="website-icon.png" alt="Website">https://natashaskitchen.com/tres-leches-cake/</a> for a wide range of free recipes online.</p>
+</body>
+</html>
