--- a/Lab3/index.html
+++ b/Lab3/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <title>My Favorite Recipe</title>
-  <img class="header-image" src="images/header-image.jpg" alt="Header Image">
+  <img class="header-image" src="images/Natasha.jpg" alt="Header Image">
   <style>
     body {
       background-image: url('tresleches.jpg');
