--- a/Lab3/index.html
+++ b/Lab3/index.html
@@ -43,11 +43,10 @@
     <li>Poke holes all over the cake using a fork or skewer, then slowly pour the milk mixture over the cake, allowing it to soak in.</li>
     <li>Cover the cake and refrigerate for at least 4 hours or overnight.</li>
     <li>To serve, sprinkle the top with ground cinnamon. Cut into squares and
-  <div class="image">
-    <img src="image.jpg" alt="Image Description">
-  </div>
+  </ol>
   
-  <p>If you'd like to explore more delicious recipes, check out <a href="https://natashaskitchen.com/tres-leches-cake/">
-    <img src="website-icon.png" alt="Website">https://natashaskitchen.com/tres-leches-cake/</a> for a wide range of free recipes online.</p>
+  <p>Tres Leches is my favorite recipe because it combines the moistness of a sponge cake with the creamy richness of three different milks. The result is a heavenly dessert that melts in your mouth. It's perfect for any occasion, from birthdays to family gatherings.</p>
+  
+  <p>If you'd like to explore more delicious recipes, check out <a href="https://natashaskitchen.com/tres-leches-cake/">https://natashaskitchen.com/tres-leches-cake/</a> for a wide range of free recipes online.</p>
 </body>
 </html>
