--- a/Lab4/index.html
+++ b/Lab4/index.html
@@ -1,8 +1,15 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <link rel="stylesheet" href="styles.css">
   <title>My Favorite Recipe</title>
+  <img class="header-image" src="Images/Natasha.jpg" alt="Header Image">
+  <style>
+    body {
+      background-image: url('tresleches.jpg');
+      background-size: cover;
+    }
+  </style>
+  <link rel="stylesheet" href="styles.css">
 </head>
 <body>
   <div class="container">
