--- a/Lab4/index.html
+++ b/Lab4/index.html
@@ -53,9 +53,9 @@
     <div class="side-element">
       <h3>Related Recipes</h3>
       <ul>
-        <li><a href="#">Flan</</a></li>
-        <li><a href="#">Churros</a></li>
-        <li><a href="#">Empanadas</a></li>
+        <li><a href="https://www.allrecipes.com/recipe/20979/spanish-flan/">Flan</</a></li>
+        <li><a href="https://www.delish.com/cooking/recipe-ideas/a27117110/easy-churros-recipe/">Churros</a></li>
+        <li><a href="https://themodernproper.com/beef-empanadas">Empanadas</a></li>
       </ul>
     </div>
   </div>
