--- a/Lab4/index.html
+++ b/Lab4/index.html
@@ -49,8 +49,16 @@
 
       <p>If you'd like to explore more delicious recipes, check out <a href="https://natashaskitchen.com/tres-leches-cake/">https://natashaskitchen.com/tres-leches-cake/</a> for a wide range of free recipes online.</p>
     </div>
+
+    <div class="side-element">
+      <h3>Related Recipes</h3>
+      <ul>
+        <li><a href="#">Flan</</a></li>
+        <li><a href="#">Churros</a></li>
+        <li><a href="#">Empanadas</a></li>
+      </ul>
+    </div>
   </div>
 </body>
 </html>
-
 
