--- a/Lab4/index.html
+++ b/Lab4/index.html
@@ -17,7 +17,33 @@
         <tr>
           <td>1 cup all-purpose flour</td>
         </tr>
-        <!-- Rest of the ingredients... -->
+        <tr>
+          <td>1 1/2 teaspoons baking powder</td>
+        </tr>
+        <tr>
+          <td>1/4 cup unsalted butter, softened</td>
+        </tr>
+        <tr>
+          <td>3/4 cup white sugar</td>
+        </tr>
+        <tr>
+          <td>5 eggs</td>
+        </tr>
+        <tr>
+          <td>1/2 teaspoon vanilla extract</td>
+        </tr>
+        <tr>
+          <td>1 cup whole milk</td>
+        </tr>
+        <tr>
+          <td>1 (14 oz) can sweetened condensed milk</td>
+        </tr>
+        <tr>
+          <td>1 (12 oz) can evaporated milk</td>
+        </tr>
+        <tr>
+          <td>1 1/2 cups heavy cream</td>
+        </tr>
       </table>
 
       <table>
@@ -27,14 +53,45 @@
         <tr>
           <td>Preheat the oven to 350°F (175°C). Grease and flour a 9x13-inch baking pan.</td>
         </tr>
-        <!-- Rest of the instructions... -->
+        <tr>
+          <td>In a medium mixing bowl, combine flour and baking powder. Set aside.</td>
+        </tr>
+        <tr>
+          <td>In a large mixing bowl, cream together the softened butter and sugar until light and fluffy.</td>
+        </tr>
+        <tr>
+          <td>Add eggs one at a time, beating well after each addition. Stir in the vanilla extract.</td>
+        </tr>
+        <tr>
+          <td>Gradually add the flour mixture into the butter mixture, alternating with the whole milk. Mix until just combined.</td>
+        </tr>
+        <tr>
+          <td>Pour the batter into the prepared baking pan and spread it evenly.</td>
+        </tr>
+        <tr>
+          <td>Bake for 30-35 minutes or until a toothpick inserted into the center comes out clean.</td>
+        </tr>
+        <tr>
+          <td>Remove the cake from the oven and let it cool for about 10 minutes.</td>
+        </tr>
+        <tr>
+          <td>In a separate mixing bowl, whisk together the sweetened condensed milk, evaporated milk, and heavy cream.</td>
+        </tr>
+        <tr>
+          <td>Poke holes all over the cake using a fork or skewer, then slowly pour the milk mixture over the cake, allowing it to soak in.</td>
+        </tr>
+        <tr>
+          <td>Cover the cake and refrigerate for at least 4 hours or overnight.</td>
+        </tr>
+        <tr>
+          <td>To serve, sprinkle the top with ground cinnamon. Cut into squares and enjoy!</td>
+        </tr>
       </table>
 
       <p>Tres Leches is my favorite recipe because it combines the moistness of a sponge cake with the creamy richness of three different milks. The result is a heavenly dessert that melts in your mouth. It's perfect for any occasion, from birthdays to family gatherings.</p>
-
+  
       <p>If you'd like to explore more delicious recipes, check out <a href="https://natashaskitchen.com/tres-leches-cake/">https://natashaskitchen.com/tres-leches-cake/</a> for a wide range of free recipes online.</p>
     </div>
-
 <div class="side-element">
   <h3>Related Recipes</h3>
   <ul>
