--- a/Project1/index.html
+++ b/Project1/index.html
@@ -11,13 +11,13 @@
   <nav>
     <ul>
       <li><a href="manhua.html">Manhua</a></li>
-      <li><a href="driving.html">Driving</a></li>
+      <li><a href="friendgroup.html">Driving</a></li>
       <li><a href="pcbuilding.html">PC Building</a></li>
     </ul>
   </nav>
   <section>
     <h2>Hello, My name is Chinedu</h2>
-    <p> This is my project 1, two of the images are mine and three are from google. The group picture included i have consent from my friends to include their faces.</p>
+    <p> This is my project 1, two of the images are mine and three are from Google. The group picture included I have consent from my friends to include their faces.</p>
     <img src="ME.jpg" alt="Myself">
   </section>
 </body>
