--- a/Project1/index.html
+++ b/Project1/index.html
@@ -10,9 +10,9 @@
   </header>
   <nav>
     <ul>
-      <li><a href="manhua.html">Manhua</a></li>
-      <li><a href="friendgroup.html">Driving</a></li>
-      <li><a href="pcbuilding.html">PC Building</a></li>
+      <li><a href="subfolder/manhua.html">Manhua</a></li>
+      <li><a href="subfolder/friendgroup.html">Driving</a></li>
+      <li><a href="subfolder/pcbuilding.html">PC Building</a></li>
     </ul>
   </nav>
   <section>
