--- a/Project1/index.html
+++ b/Project1/index.html
@@ -17,7 +17,7 @@
   <nav>
     <ul>
       <li><a href="manhua.html">Manhua</a></li>
-      <li><a href="driving.html">Driving</a></li>
+      <li><a href="friendgroup.html">Driving</a></li>
       <li><a href="pcbuilding.html">PC Building</a></li>
     </ul>
   </nav>
