--- a/Project1/friendgroup.html
+++ b/Project1/friendgroup.html
@@ -34,7 +34,7 @@
     <section>
       <h2>Friend Group</h2>
       <p>These are my friends. They are some of the best people to be around, joke around with, and get to know.</p>
-      <img class="img-friends" src="img/friends.jpeg" alt="Image">
+      <img class="img-friends" src="img/friends.png" alt="Image">
     </section>
   </div>
 </body>
