--- a/Project1/Mygf.html
+++ b/Project1/Mygf.html
@@ -33,7 +33,7 @@
     </header>
     <section>
       <p>This is my Girlfriend she is my favorite person on this list. She is kinnd, caring, loving, and over all very intelligent.</p>
-      <img class="img-friends" src="img/Mygf.jpeg" alt="Image">
+      <img class="img-friends" src="img/Mygf.jpg" alt="Image">
     </section>
   </div>
 </body>
