--- a/Project1/index.html
+++ b/Project1/index.html
@@ -48,7 +48,7 @@
     <nav>
       <ul class="navbar">
         <li><a href="manhua.html">Manhua</a></li>
-        <li><a href="friendgroup.html">Friends</a></li>
+        <li><a href="Mygf.html">Her</a></li>
         <li><a href="pcbuilding.html">PC Building</a></li>
       </ul>
     </nav>
