--- a/Project1/pcbuilding.html
+++ b/Project1/pcbuilding.html
@@ -35,7 +35,7 @@
       <h2>PC Building Page</h2>
       <p>One of my hobbies is PC building. Building PCs not only gives me practice but also enables me to have fun doing it.
       I have a Ryzen 5800x 3D processor with a Radeon 6750 GPU; I will soon upgrade it.</p>
-      <img class="img-pc" src="img/pc.jpg" alt="Image" style="width: 500px;" "length: 700px">
+      <img class="img-pc" src="img/pc.jpg" alt="Image" style="width: 500px;">
     </section>
   </div>
 </body>
