--- a/Project1/manhua.html
+++ b/Project1/manhua.html
@@ -35,7 +35,7 @@
       <h2>What I Read</h2>
       <p>Manhua means Korean manga; they are colored and unlike Japanese manga that are in black and white. Solo Leveling is my all-time favorite Manhua.
       It is about Necromancy, leveling, dungeons, action, and adventure.</p>
-      <img class="img-sololeveling" src="img/sololeveling.jpg" alt="Manhua">
+      <img class="img-sololeveling" src="img/sololeveling.jpg" alt="Manhua"  style="width: 800px;" style="height: 800px;">
     </section>
   </div>
 </body>
