--- a/MyPort/education.html
+++ b/MyPort/education.html
@@ -42,12 +42,9 @@
               </div>
             </div>
             <div class="text-container">
-              <p>                                                                                                                                      
-                  •	Built custom Desktops for clients, including high-end gaming systems and workstation builds.
-                  •	Skilled in assembling and troubleshooting PC components, including motherboards, CPUs, RAM, and graphics cards. 
-                  •	Proficient in diagnosing and resolving hardware and software issues, as well as installing operating systems and applications. 
-      
-              </p>
+              <p> This project took everything out of me I can also say that I am not confident in this project and that is because my challenges include navigation transition, <br/>
+              Following my template. Despite the challenges, I was still able to get the page to run through the help of youtube and Google searches as well as previous assignments. <br/>
+              When using the site on other browsers it can change the sizing and the layout of the web page to a degree.</p>
             </div>
           </div>
         </div>
