--- a/Lab10/index.html.html
+++ b/Lab10/index.html.html
@@ -53,15 +53,12 @@ Copy code
 </ul>
 
 <h2>What does XML look like? (provide an example)</h2>
-<p>XML uses tags to define elements and their hierarchical relationships. Here's an example of an XML document representing information about a book:</p>
-<pre><code>
-    &lt;book&gt;
+<p>XML uses tags to define elements and their hierarchical relationships. Here's an example of an XML document representing information about a book:
         &lt;title&gt;The Great Gatsby&lt;/title&gt;
         &lt;author&gt;F. Scott Fitzgerald&lt;/author&gt;
         &lt;genre&gt;Fiction&lt;/genre&gt;
         &lt;publish_year&gt;1925&lt;/publish_year&gt;
-    &lt;/book&gt;
-</code></pre>
+</p>
 
 <h2>What is JavaScript?</h2>
 <p>JavaScript is a high-level, interpreted programming language. It is commonly used to create interactive effects within web browsers, but it can also be used on the server-side with technologies like Node.js. JavaScript allows developers to add dynamic behavior to web pages, handle events, manipulate the DOM (Document Object Model), and interact with external data and APIs.</p>
@@ -71,33 +68,30 @@ Copy code
 
 <h2>What are some common JavaScript elements, properties, methods, and functions? (provide at least 1 example of each)</h2>
 <h3>Elements:</h3>
-<p>In JavaScript, elements refer to the individual components of an array or a collection. For example:</p>
-<pre><code>
+<p>In JavaScript, elements refer to the individual components of an array or a collection. For example:
     const numbers = [1, 2, 3, 4, 5];
     const firstElement = numbers[0]; // Accessing the first element (1)
-</code></pre>
+</p>
 
 <h3>Properties:</h3>
-<p>Properties are attributes associated with objects. One of the common properties is the "length" property of arrays:</p>
-<pre><code>
+<p>Properties are attributes associated with objects. One of the common properties is the "length" property of arrays:
     const fruits = ['apple', 'banana', 'orange'];
     const numOfFruits = fruits.length; // The value of numOfFruits will be 3
-</code></pre>
+</p>
 
 <h3>Methods:</h3>
-<p>Methods are functions that can be called on objects. One of the common methods is the "toUpperCase()" method of strings:</p>
-<pre><code>
+<p>Methods are functions that can be called on objects. One of the common methods is the "toUpperCase()" method of strings:
     const message = 'hello';
     const upperCaseMessage = message.toUpperCase(); // The value of upperCaseMessage will be 'HELLO'
-</code></pre>
+</p>
+
 
 <h3>Functions:</h3>
-<p>Functions are blocks of code that can be executed when called. For example, a simple function that adds two numbers:</p>
-<pre><code>
-    function addNumbers(a, b) {
+<p>Functions are blocks of code that can be executed when called. For example, a simple function that adds two numbers:
+ function addNumbers(a, b) {
         return a + b;
     }
     const sum = addNumbers(3, 5); // The value of sum will be 8
-</code></pre>
+</p>
 </body>
 </html>
